tests/diagnostics/cases/parse/37_ast_check_agreement.home.expected
<repo>/tests/diagnostics/cases/parse/37_ast_check_agreement.home:18:4: error[EP0001]: Expected '(' after 'fn' in function type
  fn next_thing() {}
      ^

1 parse error(s) found
Checking: <repo>/tests/diagnostics/cases/parse/37_ast_check_agreement.home

Success: Type checking passed ✓
